--- a/_projects/personalized_attention.html
+++ b/_projects/personalized_attention.html
@@ -4,4 +4,5 @@ client: "ILS"
 image_url: "/assets/images/personalized_attention.jpeg"
 clip_url: "/assets/videos/personalized_attention.mp4"
 order: 1
+year: 2019
 ---
