--- a/_projects/personalized_attention.html
+++ b/_projects/personalized_attention.html
@@ -1,7 +1,7 @@
 ---
 title: "Personalized Attention"
 client: "ILS"
-image_url: "/assets/images/personalized_attention.jpeg"
+image_url: "/assets/images/ILS personalized attention pic.jpeg"
 clip_url: "/assets/videos/personalized_attention.mp4"
 order: 1
 year: 2019
