convert videos to webm

--- a/_projects/annie_chen.html
+++ b/_projects/annie_chen.html
@@ -2,6 +2,8 @@
 title: "LaunchX"
 client: "Annie Chen"
 image_url: "/assets/images/annie hting pic.jpeg"
-clip_url: "/assets/videos/annie thing clip.mp4"
+clip_url:
+  mp4: "uploads/videos/annie.mp4"
+  webm: "uploads/videos/annie.webm"
 order: 4
 ---
