--- a/_projects/community.html
+++ b/_projects/community.html
@@ -2,6 +2,8 @@
 title: "Community"
 client: "ILS"
 image_url: "/assets/images/ILS communit pic.jpeg"
-clip_url: "/assets/videos/ILS community clip.mp4"
+clip_url:
+  mp4: "uploads/videos/community.mp4"
+  webm: "uploads/videos/community.webm"
 order: 3
 ---
