--- a/_projects/personalized_attention.html
+++ b/_projects/personalized_attention.html
@@ -2,7 +2,9 @@
 title: "Personalized Attention"
 client: "ILS"
 image_url: "/assets/images/ILS personalized attention pic.jpeg"
-clip_url: "/assets/videos/personalized_attention.mp4"
+clip_url:
+  mp4: "uploads/videos/personalized_attention.mp4"
+  webm: "uploads/videos/personalized_attention.webm"
 order: 1
 year: 2019
 ---
