--- a/_projects/project_based_learning.html
+++ b/_projects/project_based_learning.html
@@ -2,6 +2,8 @@
 title: "Project Based Learning"
 client: "ILS"
 image_url: "/assets/images/ILS project based learning pic.jpeg"
-clip_url: "/assets/videos/ils project based learning clip.1.mp4"
+clip_url:
+  mp4: "uploads/videos/project_based_learning.mp4"
+  webm: "uploads/videos/project_based_learning.webm"
 order: 2
 ---
