--- a/_projects/st_francis.html
+++ b/_projects/st_francis.html
@@ -1,6 +1,8 @@
 ---
 title: "St. Francis Center"
 image_url: "/assets/images/st francis 2.jpeg"
-clip_url: "/assets/videos/st francis center clip.1.mp4"
+clip_url:
+  mp4: "uploads/videos/st.mp4"
+  webm: "uploads/videos/st.webm"
 order: 5
 ---
