redesign and use tiles no fullpage

--- a/_projects/annie_chen.html
+++ b/_projects/annie_chen.html
@@ -1,7 +1,7 @@
 ---
 title: "LaunchX"
 client: "Annie Chen"
-image_url: "/assets/images/annie hting pic.jpeg"
+image_url: "/uploads/images/annie.png"
 clip_url:
   mp4: "uploads/videos/annie.mp4"
   webm: "uploads/videos/annie.webm"
