--- a/_projects/project_based_learning.html
+++ b/_projects/project_based_learning.html
@@ -1,9 +1,10 @@
 ---
-title: "Project Based Learning"
+title: "Project-Based Learning"
 client: "ILS"
-image_url: "/assets/images/ILS project based learning pic.jpeg"
+image_url: "/uploads/images/ILS project based learning pic.jpeg"
 clip_url:
   mp4: "uploads/videos/project_based_learning.mp4"
   webm: "uploads/videos/project_based_learning.webm"
 order: 2
+description: Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra augue. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
 ---
