--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 layout: default
 ---
-{% include nav.html %}
-
-<div id="fullpage">
-	{% include projects.html %}
-	{% include contact.html %}
-</div>
+{% include hero.html %}
+{% include projects.html %}
+{% include about.html %}
+{% include contact.html %}
