change hero looks super frickin cool

--- a/_projects/annie_chen.html
+++ b/_projects/annie_chen.html
@@ -1,7 +1,7 @@
 ---
 title: "LaunchX"
 client: "Annie Chen"
-image_url: "/uploads/images/annie.png"
+image_url: "/uploads/poster/annie_chen.jpg"
 clip_url:
   mp4: "uploads/videos/annie.mp4"
   webm: "uploads/videos/annie.webm"
