--- a/_projects/st_francis.html
+++ b/_projects/st_francis.html
@@ -1,6 +1,6 @@
 ---
 title: "St. Francis Center"
-image_url: "/uploads/images/st francis 2.jpeg"
+image_url: "/uploads/poster/st_francis_center.jpg"
 clip_url:
   mp4: "uploads/videos/st.mp4"
   webm: "uploads/videos/st.webm"
