--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 ---
 layout: default
 ---
+{% include nav.html %}
+<div class="position-fixed" id="background-container">
+	<span id="strikethrough"></span>
+	<p id="background-name">Ashley Xu</p>
+</div>
 {% include hero.html %}
+
 {% include projects.html %}
 {% include about.html %}
-{% include contact.html %}
