--- a/_projects/community.html
+++ b/_projects/community.html
@@ -1,7 +1,7 @@
 ---
 title: "Community"
 client: "ILS"
-image_url: "/uploads/images/ILS communit pic.jpeg"
+image_url: "/uploads/poster/community.jpg"
 clip_url:
   mp4: "uploads/videos/community.mp4"
   webm: "uploads/videos/community.webm"
