--- a/_projects/personalized_attention.html
+++ b/_projects/personalized_attention.html
@@ -1,7 +1,7 @@
 ---
 title: "Personalized Attention"
 client: "ILS"
-image_url: "/uploads/images/ILS personalized attention pic.jpeg"
+image_url: "/uploads/poster/personalized_attention.jpg"
 clip_url:
   mp4: "uploads/videos/personalized_attention.mp4"
   webm: "uploads/videos/personalized_attention.webm"
