--- a/_projects/project_based_learning.html
+++ b/_projects/project_based_learning.html
@@ -1,7 +1,7 @@
 ---
 title: "Project-Based Learning"
 client: "ILS"
-image_url: "/uploads/images/ILS project based learning pic.jpeg"
+image_url: "/uploads/poster/project_based_learning.jpg"
 clip_url:
   mp4: "uploads/videos/project_based_learning.mp4"
   webm: "uploads/videos/project_based_learning.webm"
