--- a/_projects/community.html
+++ b/_projects/community.html
@@ -1,7 +1,11 @@
 ---
 title: "Community"
+type: "Professional"
+description: Along with Project Based Learning and Personalized Attention; three videos that broadcasted Imagination Lab School’s mission to further education using inquiry, effective communication, and collaboration. 
+date: March 2019
 client: "ILS"
 image_url: "/uploads/poster/community.jpg"
+youtube_url: "https://www.youtube.com/watch?v=YuZwNYfgbTk"
 clip_url:
   mp4: "uploads/videos/community.mp4"
   webm: "uploads/videos/community.webm"
