--- a/_projects/personalized_attention.html
+++ b/_projects/personalized_attention.html
@@ -1,10 +1,13 @@
 ---
 title: "Personalized Attention"
+type: "Professional"
+description: Along with Project Based Learning and Community; three videos that broadcasted Imagination Lab School’s mission to further education using inquiry, effective communication, and collaboration. 
+date: March 2019
 client: "ILS"
 image_url: "/uploads/poster/personalized_attention.jpg"
+youtube_url: "https://www.youtube.com/watch?v=FfmM62pyMJQ"
 clip_url:
   mp4: "uploads/videos/personalized_attention.mp4"
   webm: "uploads/videos/personalized_attention.webm"
 order: 1
-year: 2019
 ---
