--- a/_projects/project_based_learning.html
+++ b/_projects/project_based_learning.html
@@ -1,10 +1,13 @@
 ---
 title: "Project-Based Learning"
+type: "Professional"
+description: Along with Personalized Attention and Community; three videos that broadcasted Imagination Lab School’s mission to further education using inquiry, effective communication, and collaboration. 
 client: "ILS"
 image_url: "/uploads/poster/project_based_learning.jpg"
+youtube_url: "https://www.youtube.com/watch?v=mYabIsaQTm0"
 clip_url:
   mp4: "uploads/videos/project_based_learning.mp4"
   webm: "uploads/videos/project_based_learning.webm"
 order: 2
-description: Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nulla vitae elit libero, a pharetra augue. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+date: March 2019
 ---
