--- a/_projects/annie_chen.html
+++ b/_projects/annie_chen.html
@@ -1,7 +1,9 @@
 ---
 title: "LaunchX"
+type: "Professional"
 client: "Annie Chen"
 image_url: "/uploads/poster/annie_chen.jpg"
+youtube_url: "https://www.youtube.com/watch?v=nqUTYCSnvB8"
 clip_url:
   mp4: "uploads/videos/annie.mp4"
   webm: "uploads/videos/annie.webm"
