--- a/_projects/st_francis.html
+++ b/_projects/st_francis.html
@@ -1,8 +1,12 @@
 ---
 title: "St. Francis Center"
+type: "Professional"
+description: "A silent video documenting the services provided to the community of East Palo Alto by the St. Francis Center. Screened at the Toast of the Town fundraiser to garner interest in donations."
 image_url: "/uploads/poster/st_francis_center.jpg"
+youtube_url: "https://www.youtube.com/watch?v=qtN95i21Nq4"
 clip_url:
   mp4: "uploads/videos/st.mp4"
   webm: "uploads/videos/st.webm"
 order: 5
+date: March 2019
 ---
