attempt to add swup and fail

--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 ---
 layout: default
 ---
-{% include nav.html %}
-<div class="position-fixed" id="background-container">
-	<span id="strikethrough"></span>
-	<p id="background-name">Ashley Xu</p>
-</div>
+{% include background_name.html %}
 {% include hero.html %}
 {% include project_render.html id="creative" title=site.data.general.creative_work_title type="Creative" %}
 {% include project_render.html id="professional" title=site.data.general.professional_work_title type="Professional" %}
