progress towards mobile friendly and change background text on scroll

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 ---
 {% include background_name.html %}
 {% include hero.html %}
-{% include project_render.html id="creative" title=site.data.general.creative_work_title type="Creative" %}
-{% include project_render.html id="professional" title=site.data.general.professional_work_title type="Professional" %}
+{% include project_render.html id="creative" title=site.data.general.creative_work_title type="Creative" data_background_text="CreativeWork" %}
+{% include project_render.html id="professional" title=site.data.general.professional_work_title type="Professional" data_background_text="ProfessionalWork" %}
 {% include about.html %}
