change background text on hover to project name

--- a/_projects/project_based_learning.html
+++ b/_projects/project_based_learning.html
@@ -1,5 +1,5 @@
 ---
-title: "Project-Based Learning"
+title: "Project Based Learning"
 type: "Professional"
 description: Along with Personalized Attention and Community; three videos that broadcasted Imagination Lab School’s mission to further education using inquiry, effective communication, and collaboration. 
 client: "ILS"
