change background color on hover project

--- a/_projects/personalized_attention.html
+++ b/_projects/personalized_attention.html
@@ -10,4 +10,5 @@ clip_url:
   mp4: "uploads/videos/personalized_attention.mp4"
   webm: "uploads/videos/personalized_attention.webm"
 order: 1
+primary_color: "#3F4849"
 ---
