don't load videos on mobile

--- a/_projects/now_open.html
+++ b/_projects/now_open.html
@@ -9,5 +9,5 @@ clip_url:
   webm: "uploads/videos/now_open.webm"
 order: 1
 date: July 2019
-primary_color: "#2B3242"
+primary_color: "#48372F"
 ---
