--- a/_projects/ehp.html
+++ b/_projects/ehp.html
@@ -9,5 +9,5 @@ clip_url:
   webm: "uploads/videos/ehp.webm"
 order: 1
 date: September 2019
-primary_color: "#055A5C"
+primary_color: "#4F3B4B"
 ---
