feat: add new sections - hide sections if no projects detected - section name must match with type specified in project

--- a/_projects/annie_chen.html
+++ b/_projects/annie_chen.html
@@ -1,6 +1,6 @@
 ---
 title: "LaunchX"
-type: "Professional"
+type: Professional Work
 client: "Annie Chen"
 image_url: "/uploads/poster/annie_chen.jpg"
 youtube_url: "https://www.youtube.com/watch?v=nqUTYCSnvB8"
