--- a/_projects/community.html
+++ b/_projects/community.html
@@ -1,6 +1,6 @@
 ---
 title: "Community"
-type: "Professional"
+type: Professional Work
 description: Along with Project Based Learning and Personalized Attention; three videos that broadcasted Imagination Lab School’s mission to further education using inquiry, effective communication, and collaboration. 
 date: March 2019
 client: "ILS"
