--- a/_projects/ehp.html
+++ b/_projects/ehp.html
@@ -1,6 +1,6 @@
 ---
 title: "Ecumenical Hunger Program"
-type: "Professional"
+type: Professional Work
 description: A promotional short to broadcast EHP’s mission to connect material help and support services for people in need.
 image_url: "/uploads/poster/ehp.jpg"
 youtube_url: "https://www.youtube.com/watch?v=EkFmjHXR1ek"
