--- a/_projects/inferior.html
+++ b/_projects/inferior.html
@@ -1,6 +1,6 @@
 ---
 title: Inferior
-type: Creative
+type: Creative Work
 description: A fictional short film on a girl battling her inferiority complex. Created
   as a thesis film for the 2019 CSSSA film program.
 image_url: "/uploads/poster/inferior.jpg"
