--- a/_projects/newfoundland_x_labrador.html
+++ b/_projects/newfoundland_x_labrador.html
@@ -1,7 +1,7 @@
 ---
 title: "Newfoundland x Labrador"
 client: Lulutrip
-type: "Professional"
+type: Professional Work
 description: Commissioned to create a video detailing landmarks and activities in Newfoundland and Labrador by a travel company called Lulutrip.
 image_url: "/uploads/poster/newfoundland.jpg"
 youtube_url: "https://www.youtube.com/watch?v=DSiHw54lbpo"
