--- a/_projects/now_open.html
+++ b/_projects/now_open.html
@@ -1,6 +1,6 @@
 ---
 title: Now Open
-type: Creative
+type: Creative Work
 description: A documentary on the energy that students bring to CalArts’ Mom’s Cafe;
   establishes the contrast in environment during the day versus at night purely via
   sound effects and visuals. Created as a documentary assignment during the 2019 CSSSA
@@ -14,5 +14,4 @@ order: 3
 date: July 2019
 primary_color: "#48372F"
 client: ''
-
 ---
