--- a/_projects/ouroboros.html
+++ b/_projects/ouroboros.html
@@ -1,6 +1,6 @@
 ---
 title: Ouroboros
-type: Creative
+type: Creative Work
 description: A fictional short film about a high school student who witnesses the
   bullying of a peer and the consequence of fighting violence with violence. “Official
   Selection” in the All American High School Film Festival. Accepted as part of a
