--- a/_projects/project_based_learning.html
+++ b/_projects/project_based_learning.html
@@ -1,6 +1,6 @@
 ---
 title: "Project Based Learning"
-type: "Professional"
+type: Professional Work
 description: Along with Personalized Attention and Community; three videos that broadcasted Imagination Lab School’s mission to further education using inquiry, effective communication, and collaboration. 
 client: "ILS"
 image_url: "/uploads/poster/project_based_learning.jpg"
