--- a/_projects/reminiscence.html
+++ b/_projects/reminiscence.html
@@ -1,6 +1,6 @@
 ---
 title: Reminiscence
-type: Creative
+type: Creative Work
 description: A fictional short film on two sisters who are moving out of their old
   home.
 image_url: "/uploads/poster/reminiscence.jpg"
