--- a/_projects/sf_travel.html
+++ b/_projects/sf_travel.html
@@ -1,6 +1,6 @@
 ---
 title: City of Gold
-type: Creative
+type: Creative Work
 description: A brief travel video highlighting the wonders that San Francisco has
   to offer.
 image_url: "/uploads/poster/sf_travel.jpg"
