--- a/_projects/st_francis.html
+++ b/_projects/st_francis.html
@@ -1,6 +1,6 @@
 ---
 title: "St. Francis Center"
-type: "Professional"
+type: Professional Work
 description: "A silent video documenting the services provided to the community of East Palo Alto by the St. Francis Center. Screened at the Toast of the Town fundraiser to garner interest in donations."
 image_url: "/uploads/poster/st_francis_center.jpg"
 youtube_url: "https://www.youtube.com/watch?v=qtN95i21Nq4"
