--- a/_projects/personalized_attention.html
+++ b/_projects/personalized_attention.html
@@ -1,6 +1,6 @@
 ---
 title: "Personalized Attention"
-type: "Professional"
+type: Professional Work
 description: Along with Project Based Learning and Community; three videos that broadcasted Imagination Lab School’s mission to further education using inquiry, effective communication, and collaboration. 
 date: March 2019
 client: "ILS"
